--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,18 @@
-okta:
-  oauth2:
-    issuer: https://{yourDomain}/
-    client-id: {yourClientId}
-    client-secret: {yourClientSecret}
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          auth0:
+            client-id: ${AUTH0_CLIENT_ID:your-client-id}
+            client-secret: ${AUTH0_CLIENT_SECRET:your-client-secret}
+            scope:
+              - openid
+              - profile
+              - email
+        provider:
+          auth0:
+            issuer-uri: ${AUTH0_ISSUER:https://your-domain.auth0.com/}
 
 server:
   port: 3000
